// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inset renders 0 1`] = `
Array [
  .c0 {
  inset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders function 1`] = `
Array [
  .c0 {
  inset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  inset: has;
}

<div
    className="c0"
  />,
  .c0 {
  inset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  inset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders invalid theme path 1`] = `
Array [
  .c0 {
  inset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  inset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  inset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  inset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders negative number 1`] = `
Array [
  .c0 {
  inset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  inset: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  inset: July;
}

@media screen and (min-width:November) {
  .c0 {
    inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  inset: July;
}

@media screen and (min-width:November) {
  .c0 {
    inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  inset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  inset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    inset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    inset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  inset: July;
}

@media May {
  .c0 {
    inset: August;
  }
}

@media April {
  .c0 {
    inset: September;
  }
}

@media January {
  .c0 {
    inset: November;
  }
}

@media April {
  .c0 {
    inset: August;
  }
}

@media June {
  .c0 {
    inset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  inset: July;
}

@media May {
  .c0 {
    inset: August;
  }
}

@media April {
  .c0 {
    inset: September;
  }
}

@media January {
  .c0 {
    inset: November;
  }
}

@media April {
  .c0 {
    inset: August;
  }
}

@media June {
  .c0 {
    inset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  inset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset: November;
  }
}

@media April {
  .c0 {
    inset: January;
  }
}

@media January {
  .c0 {
    inset: December;
  }
}

@media April {
  .c0 {
    inset: April;
  }
}

@media June {
  .c0 {
    inset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  inset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset: November;
  }
}

@media April {
  .c0 {
    inset: January;
  }
}

@media January {
  .c0 {
    inset: December;
  }
}

@media April {
  .c0 {
    inset: April;
  }
}

@media June {
  .c0 {
    inset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    inset: July;
  }
}

@media April {
  .c0 {
    inset: August;
  }
}

@media January {
  .c0 {
    inset: September;
  }
}

@media April {
  .c0 {
    inset: November;
  }
}

@media June {
  .c0 {
    inset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    inset: July;
  }
}

@media April {
  .c0 {
    inset: August;
  }
}

@media January {
  .c0 {
    inset: September;
  }
}

@media April {
  .c0 {
    inset: November;
  }
}

@media June {
  .c0 {
    inset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset: January;
  }
}

@media April {
  .c0 {
    inset: December;
  }
}

@media January {
  .c0 {
    inset: April;
  }
}

@media April {
  .c0 {
    inset: May;
  }
}

@media June {
  .c0 {
    inset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset: January;
  }
}

@media April {
  .c0 {
    inset: December;
  }
}

@media January {
  .c0 {
    inset: April;
  }
}

@media April {
  .c0 {
    inset: May;
  }
}

@media June {
  .c0 {
    inset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders postitive number 1`] = `
Array [
  .c0 {
  inset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  inset: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders string 1`] = `
Array [
  .c0 {
  inset: July;
}

<div
    className="c0"
  />,
  .c0 {
  inset: July;
}

<div
    className="c0"
  />,
  .c0 {
  inset: June;
}

<div
    className="c0"
  />,
  .c0 {
  inset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`inset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`inset renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-inset: DarkSlateBlue;
  -ms-inset: DarkSlateBlue;
  inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset: DarkSlateBlue;
  -ms-inset: DarkSlateBlue;
  inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset: DarkSlateBlue;
  -ms-inset: DarkSlateBlue;
  inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset: DarkSlateBlue;
  -ms-inset: DarkSlateBlue;
  inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
